--- a/functions/package.json
+++ b/functions/package.json
@@ -17,10 +17,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.5.0",
+    "lint": "^0.8.19"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "eslint": "^8.55.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
   },
