--- a/functions/package.json
+++ b/functions/package.json
@@ -12,13 +12,16 @@
   "engines": {
     "node": "18"
   },
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.5.0",
-    "lint": "^0.8.19"
+    "lint": "^0.8.19",
+    "pipedrive": "^22.3.0"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
