--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "lint": "^0.8.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
