--- a/functions/.env
+++ b/functions/.env
@@ -1,6 +1,6 @@
-SKLONOVANI_API_KEY = 'd4c5f4acb'
-PIPEDRIVE_CLIENT_ID = '93f56513e52ca2ba'
-PIPEDRIVE_CLIENT_SECRET = 'ed80e435d374ade659bad58d675235a01f834a2f'
-SERVER_URL = 'https://us-central1-pdosloveni.cloudfunctions.net/app'
-APP_URL = 'https://pdosloveni.web.app'
-HOOKDECK_API_KEY = '0e8y7l2lkjt4cjsi67qlngh649l5tvj9ubki5qyffj1el1m53j'
+SKLONOVANI_API_KEY = ''
+PIPEDRIVE_CLIENT_ID = ''
+PIPEDRIVE_CLIENT_SECRET = ''
+SERVER_URL = ''
+APP_URL = ''
+HOOKDECK_API_KEY = ''
